vlib/v/parser/tests/fn_type_del_same_param_type.out
vlib/v/parser/tests/fn_type_del_same_param_type.vv:1:19: error: `FnType` cannot be a parameter as it references the fntype
    1 | type FnType = fn (FnType) string
      |                   ~~~~~~
