vlib/v/parser/tests/fn_type_del_same_param_type.vv
type FnType = fn (FnType) string
